--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                         Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
                     </div>
                 </div>
-                <!-- <div class="tabcontent">
+                <div class="tabcontent">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <div class="tabcontent__descr">
                         Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!                                     
                     </div>
-                </div> -->
-                <!-- <div class="tabcontent">
+                </div>
+                <div class="tabcontent">
                     <img src="img/tabs/post.jpg" alt="post">
                     <div class="tabcontent__descr">
                         Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!                                     
@@ -59,7 +59,7 @@
                     <div class="tabcontent__descr">
                         Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
                     </div>
-                </div> -->
+                </div>
                 <div class="tabheader">
                     <h3>Выберите стиль питания</h3>
                     <div class="tabheader__items">
@@ -70,6 +70,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="preview__life">Живи полной жизнью!</div>
         </div>
     </div>
@@ -245,7 +246,9 @@
                     Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
                     Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
                     <br><br>
-                    Акция закончится 20 мая в 00:00
+                    Акция закончится:
+                <div id="sale_date">2021-05-12</div>
+                  
                 </div>
             </div>
             <div class="promotion__timer">
@@ -303,5 +306,6 @@
             </div>
         </div>
     </div>
+    <script src='js/script.js'></script>
 </body>
 </html>
